--- a/src/Gui/Formation/Formation.fxml
+++ b/src/Gui/Formation/Formation.fxml
@@ -43,47 +43,45 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="544.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.Formation.FormationController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="929.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.Formation.FormationController">
     <children>
-        <Pane fx:id="pane" prefHeight="515.0" prefWidth="902.0" stylesheets="@../StylSheet/Style.css">
+        <Pane fx:id="pane" prefHeight="629.0" prefWidth="929.0" stylesheets="@../StylSheet/Style.css">
             <children>
-                <TextField fx:id="tfnom" layoutX="14.0" layoutY="36.0" prefHeight="25.0" prefWidth="165.0" promptText="nom" />
-                <TextField fx:id="tformateur" layoutX="14.0" layoutY="67.0" prefHeight="26.0" prefWidth="165.0" promptText="formateur" />
+                <TextField fx:id="tfnom" layoutX="35.0" layoutY="78.0" prefHeight="25.0" prefWidth="165.0" promptText="nom" />
+                <TextField fx:id="tformateur" layoutX="35.0" layoutY="126.0" prefHeight="26.0" prefWidth="165.0" promptText="formateur" />
 
 
 
-                <Button fx:id="addformation" layoutX="12.0" layoutY="428.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="Ajouter" />
-            <Line endX="-413.0" endY="-81.0" layoutX="414.0" layoutY="491.0" startX="-177.0" startY="-81.0" stroke="#b5b0b0" />
-            <TextField fx:id="tftel" layoutX="15.0" layoutY="290.0" prefHeight="26.0" prefWidth="165.0" promptText="tel" />
-            <TextField fx:id="tfmail" layoutX="15.0" layoutY="252.0" prefHeight="26.0" prefWidth="165.0" promptText="mail" />
-            <TextField fx:id="tfadresse" layoutX="14.0" layoutY="216.0" prefHeight="26.0" prefWidth="165.0" promptText="adresse" />
-            <TextField fx:id="tfdescription" layoutX="15.0" layoutY="105.0" prefHeight="26.0" prefWidth="165.0" promptText="description" />
-            <Label layoutX="243.0" prefHeight="49.0" prefWidth="394.0" text="Liste des formations" textFill="#2920a4">
-               <font>
-                  <Font size="33.0" />
-               </font>
-            </Label>
-            <Button fx:id="addcateg1" layoutX="186.0" layoutY="428.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="85.0" text="supprimer" />
-            <Button fx:id="addcateg2" layoutX="95.0" layoutY="428.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="modifier" />
-            <TextField fx:id="tfSearch" layoutX="294.0" layoutY="49.0" prefHeight="31.0" prefWidth="291.0" promptText="Search" />
-            <TextField fx:id="tfprix" layoutX="13.0" layoutY="328.0" prefHeight="26.0" prefWidth="165.0" promptText="prix" />
-            <TableView fx:id="tvBooks" layoutX="212.0" layoutY="100.0" prefHeight="299.0" prefWidth="661.0">
+                <Button fx:id="addformation" layoutX="17.0" layoutY="547.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="Ajouter" />
+            <Line endX="-413.0" endY="-81.0" layoutX="441.0" layoutY="607.0" startX="-177.0" startY="-81.0" stroke="#b5b0b0" />
+            <TextField fx:id="tftel" layoutX="35.0" layoutY="389.0" prefHeight="26.0" prefWidth="165.0" promptText="tel" />
+            <TextField fx:id="tfmail" layoutX="35.0" layoutY="345.0" prefHeight="26.0" prefWidth="165.0" promptText="mail" />
+            <TextField fx:id="tfadresse" layoutX="35.0" layoutY="302.0" prefHeight="26.0" prefWidth="165.0" promptText="adresse" />
+            <TextField fx:id="tfdescription" layoutX="35.0" layoutY="174.0" prefHeight="26.0" prefWidth="165.0" promptText="description" />
+            <Button fx:id="supprimer" layoutX="189.0" layoutY="547.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="85.0" text="supprimer" />
+            <Button fx:id="modifier" layoutX="98.0" layoutY="547.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="modifier" />
+            <TextField fx:id="tfSearch"  onKeyReleased="#tfSearchOnKeyReleased" layoutX="413.0" layoutY="75.0" prefHeight="31.0" prefWidth="291.0" promptText="Search" />
+            <TextField fx:id="tfprix" layoutX="35.0" layoutY="435.0" prefHeight="26.0" prefWidth="165.0" promptText="prix" />
+            <TableView fx:id="tvBooks" layoutX="251.0" layoutY="118.0" prefHeight="421.0" prefWidth="515.0">
                <columns>
-                  <TableColumn fx:id="ID" prefWidth="38.39996337890625" text="id" />
-                  <TableColumn fx:id="Departement" prefWidth="66.4000244140625" text="formation" />
-                  <TableColumn fx:id="Etage" prefWidth="116.7999267578125" text="Formateur" />
-                  <TableColumn fx:id="Libre" prefWidth="76.0" text="date_debut" />
-                  <TableColumn fx:id="Departement1" prefWidth="51.20001220703125" text="date_fin" />
-                  <TableColumn fx:id="Departement11" prefWidth="78.4000244140625" text="categorie" />
-                  <TableColumn fx:id="Departement111" prefWidth="76.79998779296875" text="adresse" />
-                  <TableColumn fx:id="Departement112" prefWidth="94.39996337890625" text="tel" />
-                  <TableColumn fx:id="Departement1121" prefWidth="60.0001220703125" text="prix" />
+                  <TableColumn fx:id="id" prefWidth="38.39996337890625" text="id" />
+                  <TableColumn fx:id="formation" prefWidth="66.4000244140625" text="formation" />
+                  <TableColumn fx:id="date_finf" prefWidth="86.4000244140625" text="date_fin" />
+                  <TableColumn fx:id="date_debutf" prefWidth="83.99993896484375" text="date_debut" />
+                  <TableColumn fx:id="adresse" prefWidth="103.20001220703125" text="adresse" />
+                  <TableColumn fx:id="tel" prefWidth="76.800048828125" text="tel" />
+                  <TableColumn fx:id="prix" prefWidth="52.800048828125" text="prix" />
                </columns>
             </TableView>
-            <ChoiceBox fx:id="choicecateg" layoutX="12.0" layoutY="365.0" prefHeight="25.0" prefWidth="165.0" />
-            <DatePicker fx:id="date_debut" layoutX="19.0" layoutY="147.0" prefHeight="25.0" prefWidth="158.0" />
-            <DatePicker fx:id="date_fin" layoutX="19.0" layoutY="182.0" prefHeight="25.0" prefWidth="158.0" />
-            <Button fx:id="addformation1" layoutX="755.0" layoutY="420.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="select" />
+            <ChoiceBox fx:id="choicecateg" layoutX="35.0" layoutY="476.0" prefHeight="25.0" prefWidth="165.0" />
+            <DatePicker fx:id="date_debut" layoutX="35.0" layoutY="217.0" prefHeight="25.0" prefWidth="165.0" />
+            <DatePicker fx:id="date_fin" layoutX="35.0" layoutY="258.0" prefHeight="25.0" prefWidth="165.0" />
+            <Button fx:id="select" layoutX="816.0" layoutY="555.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="Select" />
+            <Label layoutX="288.0" layoutY="14.0" text="Liste des formations" textFill="#321076">
+               <font>
+                  <Font name="Comic Sans MS Bold Italic" size="38.0" />
+               </font>
+            </Label>
 
 
 
