--- a/src/Gui/Formation/Formation.fxml
+++ b/src/Gui/Formation/Formation.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -45,43 +46,46 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="929.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.Formation.FormationController">
     <children>
-        <Pane fx:id="pane" prefHeight="629.0" prefWidth="929.0" stylesheets="@../StylSheet/Style.css">
+        <Pane fx:id="pane" layoutX="-24.0" prefHeight="718.0" prefWidth="953.0" stylesheets="@../StylSheet/Style.css">
             <children>
                 <TextField fx:id="tfnom" layoutX="35.0" layoutY="78.0" prefHeight="25.0" prefWidth="165.0" promptText="nom" />
                 <TextField fx:id="tformateur" layoutX="35.0" layoutY="126.0" prefHeight="26.0" prefWidth="165.0" promptText="formateur" />
 
 
 
-                <Button fx:id="addformation" layoutX="17.0" layoutY="547.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="Ajouter" />
+                <Button fx:id="addformation" layoutX="51.0" layoutY="539.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="Ajouter" />
             <Line endX="-413.0" endY="-81.0" layoutX="441.0" layoutY="607.0" startX="-177.0" startY="-81.0" stroke="#b5b0b0" />
             <TextField fx:id="tftel" layoutX="35.0" layoutY="389.0" prefHeight="26.0" prefWidth="165.0" promptText="tel" />
             <TextField fx:id="tfmail" layoutX="35.0" layoutY="345.0" prefHeight="26.0" prefWidth="165.0" promptText="mail" />
             <TextField fx:id="tfadresse" layoutX="35.0" layoutY="302.0" prefHeight="26.0" prefWidth="165.0" promptText="adresse" />
             <TextField fx:id="tfdescription" layoutX="35.0" layoutY="174.0" prefHeight="26.0" prefWidth="165.0" promptText="description" />
-            <Button fx:id="btnremove" onAction="#removeAction"  layoutX="189.0" layoutY="547.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="85.0" text="supprimer" />
-            <Button fx:id="modifier" layoutX="98.0" layoutY="547.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="modifier" />
-            <TextField fx:id="tfSearch"   layoutX="413.0" layoutY="75.0" prefHeight="31.0" prefWidth="291.0" promptText="Search" />
+            <Button fx:id="btnremove"   layoutX="237.0" layoutY="539.0" mnemonicParsing="false" onAction="#removeAction" prefHeight="39.0" prefWidth="85.0" text="supprimer" />
+            <Button fx:id="editbtn"   onAction="#editAction"      layoutX="146.0" layoutY="539.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="modifier" />
+            <TextField fx:id="tfSearch" layoutX="419.0" layoutY="88.0" prefHeight="31.0" prefWidth="291.0" promptText="Search" />
             <TextField fx:id="tfprix" layoutX="35.0" layoutY="435.0" prefHeight="26.0" prefWidth="165.0" promptText="prix" />
-            <TableView fx:id="tvBooks" layoutX="251.0" layoutY="118.0" prefHeight="421.0" prefWidth="515.0">
+            <TableView fx:id="tvBooks" layoutX="342.0" layoutY="127.0" prefHeight="308.0" prefWidth="575.0">
                <columns>
                   <TableColumn fx:id="id" prefWidth="38.39996337890625" text="id" />
-                  <TableColumn fx:id="formation" prefWidth="66.4000244140625" text="formation" />
-                  <TableColumn fx:id="date_finf" prefWidth="86.4000244140625" text="date_fin" />
-                  <TableColumn fx:id="date_debutf" prefWidth="83.99993896484375" text="date_debut" />
-                  <TableColumn fx:id="adresse" prefWidth="103.20001220703125" text="adresse" />
-                  <TableColumn fx:id="tel" prefWidth="76.800048828125" text="tel" />
-                  <TableColumn fx:id="prix" prefWidth="52.800048828125" text="prix" />
-               </columns>
+                  <TableColumn fx:id="formation" prefWidth="105.5999755859375" text="formation" />
+                  <TableColumn fx:id="date_debutf" prefWidth="88.0" text="date_debut" />
+               
+                  <TableColumn fx:id="date_finf" prefWidth="88.0" text="date_fin" />
+                  <TableColumn fx:id="adresse" prefWidth="86.39996337890625" text="email" />
+                  <TableColumn fx:id="tel" prefWidth="91.2000732421875" text="tel" />
+                  <TableColumn fx:id="prix" prefWidth="76.800048828125" text="prix" />
+
+                           </columns>
             </TableView>
             <ChoiceBox fx:id="choicecateg" layoutX="35.0" layoutY="476.0" prefHeight="25.0" prefWidth="165.0" />
             <DatePicker fx:id="date_debut" layoutX="35.0" layoutY="217.0" prefHeight="25.0" prefWidth="165.0" />
             <DatePicker fx:id="date_fin" layoutX="35.0" layoutY="258.0" prefHeight="25.0" prefWidth="165.0" />
-            <Button fx:id="btnUpdate1"  onAction="#updateAction" layoutX="816.0" layoutY="555.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="74.0" text="Select" />
-            <Label layoutX="288.0" layoutY="14.0" text="Liste des formations" textFill="#321076">
+            <Button fx:id="btnUpdate1"  onAction="#updateAction"  layoutX="257.0" layoutY="395.0" mnemonicParsing="false"  prefHeight="39.0" prefWidth="74.0" text="Select" />
+            <Label layoutX="375.0" layoutY="14.0" text="Liste des formations" textFill="#321076">
                <font>
                   <Font name="Comic Sans MS Bold Italic" size="38.0" />
                </font>
             </Label>
+            <PieChart fx:id="pieChart" layoutX="363.0" layoutY="415.0" prefHeight="206.0" prefWidth="426.0" />
 
 
 
