--- a/src/Gui/User/forgotPassword.fxml
+++ b/src/Gui/User/forgotPassword.fxml
@@ -9,23 +9,28 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.User.ForgotPasswordController">
    <children>
-      <Pane layoutX="10.0" prefHeight="503.0" prefWidth="724.0" stylesheets="@../StylSheet/Style.css">
+      <Pane layoutX="10.0" prefHeight="601.0" prefWidth="879.0" stylesheets="@../StylSheet/Style.css">
          <children>
-            <TextField fx:id="email" layoutX="261.0" layoutY="185.0" prefHeight="35.0" prefWidth="230.0" stylesheets="@../StylSheet/Style.css" />
-            <Label layoutX="137.0" layoutY="185.0" prefHeight="18.0" prefWidth="81.0" stylesheets="@../StylSheet/Style.css" text="Email">
+            <TextField fx:id="email" layoutX="322.0" layoutY="239.0" prefHeight="35.0" prefWidth="230.0" stylesheets="@../StylSheet/Style.css" />
+            <Label layoutX="198.0" layoutY="239.0" prefHeight="18.0" prefWidth="81.0" stylesheets="@../StylSheet/Style.css" text="Email">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button fx:id="sendEmail" layoutX="157.0" layoutY="270.0" mnemonicParsing="false" onAction="#sendEmail" prefHeight="42.0" prefWidth="334.0" stylesheets="@../StylSheet/Style.css" text="Reset Password" />
-            <Label layoutX="83.0" layoutY="22.0" prefHeight="53.0" prefWidth="619.0" stylesheets="@../StylSheet/Style.css" text="Please enter your email to reset your password." textFill="#e10606">
+            <Button fx:id="sendEmail" layoutX="228.0" layoutY="324.0" mnemonicParsing="false" onAction="#sendEmail" prefHeight="42.0" prefWidth="334.0" stylesheets="@../StylSheet/Style.css" text="Reset Password" />
+            <Label layoutX="144.0" layoutY="76.0" prefHeight="53.0" prefWidth="619.0" stylesheets="@../StylSheet/Style.css" text="Please enter your email to reset your password." textFill="#e10606">
                <font>
                   <Font name="Bell MT Bold" size="24.0" />
                </font>
             </Label>
-            <Label fx:id="msg" layoutX="263.0" layoutY="226.0" prefHeight="27.0" prefWidth="220.0" stylesheets="@../StylSheet/Style.css" textFill="RED">
+            <Label fx:id="msg" layoutX="298.0" layoutY="280.0" prefHeight="27.0" prefWidth="268.0" stylesheets="@../StylSheet/Style.css" textFill="RED">
                <font>
                   <Font size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="label" layoutX="228.0" layoutY="420.0" prefHeight="53.0" prefWidth="374.0" textAlignment="CENTER" textFill="RED">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
          </children>
